--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "rust_templates"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Templates for rust cli apps"
+categories = ["command-line-interface", "command-line-utilities"]
 
 [dependencies]
 nu-ansi-term = "0.50"
